Fix login/signup Navbar spacing

--- a/client/src/components/styles/Modal.scss
+++ b/client/src/components/styles/Modal.scss
@@ -15,7 +15,7 @@
 
   overflow: auto;
 
-  padding-top: 30px;
+  padding-top: 50px;
 }
 
 .popup {
